@@ -7,6 +7,7 @@ dialogfe (05 Jan 2005):
   ow my colon is missing.
   fixed prompts in partitioning
   added GENTOO_MIRRORS and SYNC options to make.conf
+  fixed comma on users. changed kernel to not ask for genkernel if doing livecd
   
   25 Mar 2005; Preston Cody <codeman@gentoo.org>
   added another patch from zahna for portage tarball selection.
